safemlx-sys/src/mlx-c/mlx/c/array.h

typedef _Fcomplex mlx_complex64_t;
typedef float _Complex mlx_complex64_t;
/**
 * \defgroup mlx_array Array
 * MLX N-dimensional array object.
 */
/**@{*/

/**
 * A N-dimensional array object.
 */
typedef struct mlx_array_ {
  void* ctx;
  // Null for ordinary new/delete. Prepared inputs and prepaid handle clones use
  // this closed arena owner. Shallow C copies still obey unique-handle custody.
  void* prepared_owner;
} mlx_array;
static mlx_array mlx_array_empty;
/**
 * Array element type.
 */
typedef enum mlx_dtype_ {
  MLX_BOOL,
  MLX_UINT8,
  MLX_UINT16,
  MLX_UINT32,
  MLX_UINT64,
  MLX_INT8,
  MLX_INT16,
  MLX_INT32,
  MLX_INT64,
  MLX_FLOAT16,
  MLX_FLOAT32,
  MLX_FLOAT64,
  MLX_BFLOAT16,
  MLX_COMPLEX64,
} mlx_dtype;
/**
 * Size of given mlx_dtype datatype in bytes.
 */
size_t mlx_dtype_size(mlx_dtype dtype);
/**
 * Get array description.
 */
int mlx_array_tostring(mlx_string* str, const mlx_array arr);
/**
 * New empty array.
 */
mlx_array mlx_array_new(void);
/**
 * Free an array.
 */
int mlx_array_free(mlx_array arr);
/**
 * Cold storage for one future ordinary array handle, without constructing an
 * ArrayDesc, Data, graph or numerical buffer. `storage` must initially be null.
 * On failure it is unchanged. The unfilled storage has unique ownership.
 */
int mlx_array_clone_storage_new(void** storage);
/** Same single handle extent; fixed status and no formatted error storage. */
uint32_t mlx_array_clone_storage_new_fixed(void** storage);
/** Free only unfilled storage returned by mlx_array_clone_storage_new. */
void mlx_array_clone_storage_free(void* storage);
/**
 * Share the actual source descriptor into that final handle storage. The source
 * and storage must be live, uniquely owned as applicable, and externally
 * serialized. Output must be empty. Success consumes storage (sets it null)
 * and publishes an ordinary mlx_array, paired with mlx_array_free. No allocation,
 * evaluation, hooks or error formatting. 0 success; 4 invalid/consumed storage
 * or arguments. Refusal changes neither output nor storage nor source.
 */
uint32_t mlx_array_clone_storage_fill(
    mlx_array* output, void** storage, const mlx_array source);
/** Named native call controls, excluding the separately reported handle bytes. */
size_t mlx_array_clone_storage_control_bytes(void);
/**
 * New array from a bool scalar.
 */
mlx_array mlx_array_new_bool(bool val);
/**
 * New array from a int scalar.
 */
mlx_array mlx_array_new_int(int val);
/**
 * New array from a float32 scalar.
 */
mlx_array mlx_array_new_float32(float val);
/**
 * New array from a float scalar.
 * Same as float32.
 */
mlx_array mlx_array_new_float(float val);
/**
 * New array from a float64 scalar.
 */
mlx_array mlx_array_new_float64(double val);
/**
 * New array from a double scalar.
 * Same as float64.
 */
mlx_array mlx_array_new_double(double val);
/**
 * New array from a complex scalar.
 */
mlx_array mlx_array_new_complex(float real_val, float imag_val);
/**
 * New array from existing buffer.
 * @param data A buffer which will be copied.
 * @param shape Shape of the array.
 * @param dim Number of dimensions (size of `shape`).
 * @param dtype Type of array elements.
 */
mlx_array mlx_array_new_data(
    const void* data,
    const int* shape,
    int dim,
    mlx_dtype dtype);
/**
 * Allocate a zero-initialized, host-addressable array in native storage.
 * The returned writable pointer is exclusively owned by the new array and must
 * not be used after the array is shared or submitted. CPU and Metal only.
 */
int mlx_array_new_host(
    mlx_array* result,
    void** data,
    const int* shape,
    int dim,
    mlx_dtype dtype);
/**
 * New array from existing buffer.
 * @param data A buffer which will be copied.
 * @param shape Shape of the array.
 * @param dim Number of dimensions (size of `shape`).
 * @param dtype Type of array elements.
 * @param dtor Callback for when the buffer is no longer needed.
 */
mlx_array mlx_array_new_data_managed(
    void* data,
    const int* shape,
    int dim,
    mlx_dtype dtype,
    void (*dtor)(void*));
/**
 * New array from existing buffer.
 * @param data A buffer which will be copied.
 * @param shape Shape of the array.
 * @param dim Number of dimensions (size of `shape`).
 * @param dtype Type of array elements.
 * @param payload Payload pointer passed to the `dtor` callback instead of
 * `data`.
 * @param dtor Callback for when the buffer is no longer needed.
 */
mlx_array mlx_array_new_data_managed_payload(
    void* data,
    const int* shape,
    int dim,
    mlx_dtype dtype,
    void* payload,
    void (*dtor)(void*));
/**
 * Set array to provided src array.
 */
int mlx_array_set(mlx_array* arr, const mlx_array src);
/**
 * Bytes of the single C++ handle allocated when copying into an empty mlx_array.
 * The copy shares the existing ArrayDesc and does not copy its shape or backing.
 * Excludes allocator bookkeeping, source storage, and caller-owned wrappers.
 * Reads no array or runtime state and does not allocate or acquire a lock.
 */
size_t mlx_array_clone_handle_bytes(void);
/**
 * Set array to a bool scalar.
 */
int mlx_array_set_bool(mlx_array* arr, bool val);
/**
 * Set array to a int scalar.
 */
int mlx_array_set_int(mlx_array* arr, int val);
/**
 * Set array to a float32 scalar.
 */
int mlx_array_set_float32(mlx_array* arr, float val);
/**
 * Set array to a float scalar.
 */
int mlx_array_set_float(mlx_array* arr, float val);
/**
 * Set array to a float64 scalar.
 */
int mlx_array_set_float64(mlx_array* arr, double val);
/**
 * Set array to a double scalar.
 */
int mlx_array_set_double(mlx_array* arr, double val);
/**
 * Set array to a complex scalar.
 */
int mlx_array_set_complex(mlx_array* arr, float real_val, float imag_val);
/**
 * Set array to specified data and shape.
 * @param arr Destination array.
 * @param data A buffer which will be copied.
 * @param shape Shape of the array.
 * @param dim Number of dimensions (size of `shape`).
 * @param dtype Type of array elements.
 */
int mlx_array_set_data(
    mlx_array* arr,
    const void* data,
    const int* shape,
    int dim,
    mlx_dtype dtype);
/**
 * The size of the array's datatype in bytes.
 */
size_t mlx_array_itemsize(const mlx_array arr);
/**
 * Number of elements in the array.
 */
size_t mlx_array_size(const mlx_array arr);
/**
 * The number of bytes in the array.
 */
size_t mlx_array_nbytes(const mlx_array arr);
/**
 * Borrowed descriptor witness. No field owns or pins an array, shape, backing,
 * completion or allowance. Caller must retain the actual array and serialize
 * its descriptor access for the entire read/fill loan. Completed backing is
 * certified by the same kernel as mlx_array_allocation_info; unknown stays
 * unknown. Shape is immutable descriptor storage, not a completion certificate.
 */
typedef struct mlx_array_descriptor_ {
  uintptr_t descriptor;
  const int* shape;
  size_t rank;
  mlx_dtype dtype;
  size_t elements;
  size_t logical_bytes;
  uint32_t status;
  bool event_present;
  const void* data;
  const void* buffer;
  bool known;
  bool host_transfer;
  uint64_t identity;
  size_t allocation_bytes;
  mlx_memory_placement placement;
  size_t host_control_bytes;
} mlx_array_descriptor;