safemlx-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[derive(PartialEq, Copy, Clone, Hash, Debug, Default)]
#[repr(C)]
pub struct __BindgenComplex<T> {
    pub re: T,
    pub im: T,
}
#[derive(PartialEq, Copy, Clone, Hash, Debug, Default)]
#[repr(transparent)]
pub struct __BindgenFloat16(pub u16);
#[doc = " A MLX string object."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_string_ {
    pub ctx: *mut ::std::os::raw::c_void,
}
#[doc = " A MLX string object."]
pub type mlx_string = mlx_string_;
extern "C" {
    #[doc = " Returns a new empty string."]
    pub fn mlx_string_new() -> mlx_string;
}
extern "C" {
    #[doc = " Returns a new string, copying contents from `str`, which must end with `\\0`."]
    pub fn mlx_string_new_data(str_: *const ::std::os::raw::c_char) -> mlx_string;
}
extern "C" {
    #[doc = " Set string to src string."]
    pub fn mlx_string_set(str_: *mut mlx_string, src: mlx_string) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns a pointer to the string contents.\n The pointer is valid for the life duration of the string."]
    pub fn mlx_string_data(str_: mlx_string) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Free string."]
    pub fn mlx_string_free(str_: mlx_string) -> ::std::os::raw::c_int;
}
pub type mlx_complex64_t = __BindgenComplex<f32>;
pub type float16_t = __BindgenFloat16;
pub type bfloat16_t = u16;
#[doc = " A N-dimensional array object."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_array_ {
    pub ctx: *mut ::std::os::raw::c_void,
    pub prepared_owner: *mut ::std::os::raw::c_void,
}
#[doc = " A N-dimensional array object."]
pub type mlx_array = mlx_array_;
extern "C" {
    pub static mut mlx_array_empty: mlx_array;
}
pub const mlx_dtype__MLX_BOOL: mlx_dtype_ = 0;
pub const mlx_dtype__MLX_UINT8: mlx_dtype_ = 1;
pub const mlx_dtype__MLX_UINT16: mlx_dtype_ = 2;
pub const mlx_dtype__MLX_UINT32: mlx_dtype_ = 3;
pub const mlx_dtype__MLX_UINT64: mlx_dtype_ = 4;
pub const mlx_dtype__MLX_INT8: mlx_dtype_ = 5;
pub const mlx_dtype__MLX_INT16: mlx_dtype_ = 6;
pub const mlx_dtype__MLX_INT32: mlx_dtype_ = 7;
pub const mlx_dtype__MLX_INT64: mlx_dtype_ = 8;
pub const mlx_dtype__MLX_FLOAT16: mlx_dtype_ = 9;
pub const mlx_dtype__MLX_FLOAT32: mlx_dtype_ = 10;
pub const mlx_dtype__MLX_FLOAT64: mlx_dtype_ = 11;
pub const mlx_dtype__MLX_BFLOAT16: mlx_dtype_ = 12;
pub const mlx_dtype__MLX_COMPLEX64: mlx_dtype_ = 13;
#[doc = " Array element type."]
pub type mlx_dtype_ = ::std::os::raw::c_uint;
#[doc = " Array element type."]
pub use self::mlx_dtype_ as mlx_dtype;
extern "C" {
    #[doc = " Size of given mlx_dtype datatype in bytes."]
    pub fn mlx_dtype_size(dtype: mlx_dtype) -> usize;
}
extern "C" {
    #[doc = " Get array description."]
    pub fn mlx_array_tostring(str_: *mut mlx_string, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " New empty array."]
    pub fn mlx_array_new() -> mlx_array;
}
extern "C" {
    #[doc = " Free an array."]
    pub fn mlx_array_free(arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " New array from a bool scalar."]
    pub fn mlx_array_new_bool(val: bool) -> mlx_array;
}
extern "C" {
    #[doc = " New array from a int scalar."]
    pub fn mlx_array_new_int(val: ::std::os::raw::c_int) -> mlx_array;
}
extern "C" {
    #[doc = " New array from a float32 scalar."]
    pub fn mlx_array_new_float32(val: f32) -> mlx_array;
}
extern "C" {
    #[doc = " New array from a float scalar.\n Same as float32."]
    pub fn mlx_array_new_float(val: f32) -> mlx_array;
}
extern "C" {
    #[doc = " New array from a float64 scalar."]
    pub fn mlx_array_new_float64(val: f64) -> mlx_array;
}
extern "C" {
    #[doc = " New array from a double scalar.\n Same as float64."]
    pub fn mlx_array_new_double(val: f64) -> mlx_array;
}
extern "C" {
    #[doc = " New array from a complex scalar."]
    pub fn mlx_array_new_complex(real_val: f32, imag_val: f32) -> mlx_array;
}
extern "C" {
    #[doc = " New array from existing buffer.\n @param data A buffer which will be copied.\n @param shape Shape of the array.\n @param dim Number of dimensions (size of `shape`).\n @param dtype Type of array elements."]
    pub fn mlx_array_new_data(
        data: *const ::std::os::raw::c_void,
        shape: *const ::std::os::raw::c_int,
        dim: ::std::os::raw::c_int,
        dtype: mlx_dtype,
    ) -> mlx_array;
}
extern "C" {
    #[doc = " Allocate a zero-initialized, host-addressable array in native storage.\n The returned writable pointer is exclusively owned by the new array and must\n not be used after the array is shared or submitted. CPU and Metal only."]
    pub fn mlx_array_new_host(
        result: *mut mlx_array,
        data: *mut *mut ::std::os::raw::c_void,
        shape: *const ::std::os::raw::c_int,
        dim: ::std::os::raw::c_int,
        dtype: mlx_dtype,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " New array from existing buffer.\n @param data A buffer which will be copied.\n @param shape Shape of the array.\n @param dim Number of dimensions (size of `shape`).\n @param dtype Type of array elements.\n @param dtor Callback for when the buffer is no longer needed."]
    pub fn mlx_array_new_data_managed(
        data: *mut ::std::os::raw::c_void,
        shape: *const ::std::os::raw::c_int,
        dim: ::std::os::raw::c_int,
        dtype: mlx_dtype,
        dtor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    ) -> mlx_array;
}
extern "C" {
    #[doc = " New array from existing buffer.\n @param data A buffer which will be copied.\n @param shape Shape of the array.\n @param dim Number of dimensions (size of `shape`).\n @param dtype Type of array elements.\n @param payload Payload pointer passed to the `dtor` callback instead of\n `data`.\n @param dtor Callback for when the buffer is no longer needed."]
    pub fn mlx_array_new_data_managed_payload(
        data: *mut ::std::os::raw::c_void,
        shape: *const ::std::os::raw::c_int,
        dim: ::std::os::raw::c_int,
        dtype: mlx_dtype,
        payload: *mut ::std::os::raw::c_void,
        dtor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    ) -> mlx_array;
}
extern "C" {
    #[doc = " Set array to provided src array."]
    pub fn mlx_array_set(arr: *mut mlx_array, src: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Bytes of the C++ handle allocated when copying into an empty mlx_array.
    pub fn mlx_array_clone_handle_bytes() -> usize;
}
unsafe extern "C" {
    pub fn mlx_array_clone_storage_new(
        storage: *mut *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
    pub fn mlx_array_clone_storage_new_fixed(storage: *mut *mut ::std::os::raw::c_void) -> u32;
    pub fn mlx_array_clone_storage_free(storage: *mut ::std::os::raw::c_void);
    pub fn mlx_array_clone_storage_fill(
        output: *mut mlx_array,
        storage: *mut *mut ::std::os::raw::c_void,
        source: mlx_array,
    ) -> u32;
    pub fn mlx_array_clone_storage_control_bytes() -> usize;
    pub fn mlx_array_clone_storage_arena_capacity(capacity: *mut usize) -> u32;
    pub fn mlx_array_clone_storage_new_in(
        storage: *mut *mut ::std::os::raw::c_void,
        quota: mlx_submission_graph_quota,
    ) -> u32;
    pub fn mlx_array_clone_storage_free_in(
        storage: *mut ::std::os::raw::c_void,
        quota: mlx_submission_graph_quota,
    );
    pub fn mlx_array_clone_storage_fill_in(
        output: *mut mlx_array,
        storage: *mut *mut ::std::os::raw::c_void,
        source: mlx_array,
        quota: mlx_submission_graph_quota,
    ) -> u32;
    pub fn mlx_array_clone_storage_arena_control_bytes() -> usize;
}
extern "C" {
    #[doc = " Set array to a bool scalar."]
    pub fn mlx_array_set_bool(arr: *mut mlx_array, val: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to a int scalar."]
    pub fn mlx_array_set_int(
        arr: *mut mlx_array,
        val: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to a float32 scalar."]
    pub fn mlx_array_set_float32(arr: *mut mlx_array, val: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to a float scalar."]
    pub fn mlx_array_set_float(arr: *mut mlx_array, val: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to a float64 scalar."]
    pub fn mlx_array_set_float64(arr: *mut mlx_array, val: f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to a double scalar."]
    pub fn mlx_array_set_double(arr: *mut mlx_array, val: f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to a complex scalar."]
    pub fn mlx_array_set_complex(
        arr: *mut mlx_array,
        real_val: f32,
        imag_val: f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set array to specified data and shape.\n @param arr Destination array.\n @param data A buffer which will be copied.\n @param shape Shape of the array.\n @param dim Number of dimensions (size of `shape`).\n @param dtype Type of array elements."]
    pub fn mlx_array_set_data(
        arr: *mut mlx_array,
        data: *const ::std::os::raw::c_void,
        shape: *const ::std::os::raw::c_int,
        dim: ::std::os::raw::c_int,
        dtype: mlx_dtype,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " The size of the array's datatype in bytes."]
    pub fn mlx_array_itemsize(arr: mlx_array) -> usize;
}
extern "C" {
    #[doc = " Number of elements in the array."]
    pub fn mlx_array_size(arr: mlx_array) -> usize;
}
extern "C" {
    #[doc = " The number of bytes in the array."]
    pub fn mlx_array_nbytes(arr: mlx_array) -> usize;
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Default, PartialEq, Eq)]
pub struct mlx_memory_placement {
    pub kind: u32,
    pub device: i32,
    pub device_count: u32,
}
pub type mlx_physical_backing_publish = Option<unsafe extern "C" fn(
    *mut ::std::ffi::c_void, *mut *mut ::std::ffi::c_void,
    *mut Option<unsafe extern "C" fn(*mut ::std::ffi::c_void)>) -> bool>;
extern "C" {
    pub fn mlx_default_memory_placement(out: *mut mlx_memory_placement) -> i32;
    pub fn mlx_gpu_allocation_placement(out: *mut mlx_memory_placement) -> i32;
    pub fn mlx_error_physical_backing_failure() -> *mut ::std::ffi::c_void;
    pub fn mlx_physical_backing_control_bytes() -> usize;
    pub fn mlx_physical_backing_static_bytes() -> usize;
    pub fn mlx_observe_physical_backings(context: *mut ::std::ffi::c_void,
        observer: Option<unsafe extern "C" fn(*mut ::std::ffi::c_void, u64, usize, usize,
            mlx_memory_placement, *mut *mut ::std::ffi::c_void,
            *mut Option<unsafe extern "C" fn(*mut ::std::ffi::c_void)>,
            *mut mlx_physical_backing_publish) -> bool>) -> i32;
    pub fn mlx_memory_device_count(count: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
    pub fn mlx_memory_device_shares_host(shared: *mut bool, device: i32) -> i32;
    pub fn mlx_prepared_input_leaf_placement(out: *mut mlx_memory_placement, value: mlx_prepared_input_leaf) -> i32;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_array_descriptor_ {
    pub descriptor: usize,
    pub shape: *const ::std::os::raw::c_int,
    pub rank: usize,
    pub dtype: mlx_dtype,
    pub elements: usize,
    pub logical_bytes: usize,
    pub status: u32,
    pub event_present: bool,
    pub data: *const ::std::os::raw::c_void,
    pub buffer: *const ::std::os::raw::c_void,
    pub known: bool,
    pub host_transfer: bool,
    pub identity: u64,
    pub allocation_bytes: usize,
    pub placement: mlx_memory_placement,
    pub host_control_bytes: usize,
}
